<resources>
    <string name="app_name">Meat Processing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="available">Available</string>
    <string name="outofstock">Out of Stock</string>
    <string name="product_image">Product Image</string>
    <string name="product_price">Product Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_now">Order Now</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payments">Online Payments</string>
    <string name="choose_quantity">How much quantity?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="quantity">Quantity</string>
    <string name="unit">KG</string>
    <string name="pre_book_now">Pre-book Now</string>
    <string name="currency">Rs.</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="per">Per</string>
    <string name="ordered_quantity">Ordered Quantity</string>
    <string name="amount">Amount</string>
    <string name="user_name">Amit Chaudhary</string>
    <string name="user_phone">9847967132</string>
    <string name="user_address">Gadhawa Rural Municipality, Ward No.- 07, Kanchhi Gaun</string>
    <string name="orders">Orders</string>
    <string name="badge_sample">5</string>
    <string name="address">Address</string>
    <string name="completed">Completed</string>
    <string name="on_the_way">On The Way</string>
    <string name="under_process">Under Process</string>
    <string name="order_placed">Order Placed Successfully</string>
    <string name="view_orders">View Orders</string>
    <string name="cart_item_removed">Item Removed Successfully</string>
    <string name="cart_item_not_removed">Unable to remove item</string>
    <string name="confirm_prebook">Confirm PreBook</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="thanks_to_consumer">Thank\nyou\nso\nmuch\nfor\nshopping\nwith\nus!</string>
    <string name="error_message">Something Went Wrong!</string>
    <string name="please_choose_pmt_method">Please choose payment method</string>
    <string name="order_cancelled">Order Cancelled Successfully</string>
    <string name="cancel_order_btn_text">Cancel Order</string>
    <string name="and_text">and</string>
    <string name="order_id">Order Id</string>
    <string name="no_unconfirmed_order">You\ndon\'t\nhave\nany\nunconfirmed\norder</string>
    <string name="no_confirmed_order">None\nof\nyour\norder\nis\nunder\nprocessing.</string>
    <string name="no_ontheway_order">None\nof\nyour\norder\nis\non the way.</string>
    <string name="no_completed_order">None\nof\nyour\norder\nis\ncompleted\nyet.</string>
    <string name="order_time">Order Time</string>
    <string name="prebook">Prebook</string>
    <string name="prebooking">Prebooking</string>
    <string name="pay_now">Pay Now</string>
    <string name="track_now">Track Your Order</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle_Name</string>
    <string name="last_name">Last Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address_details">Address Details</string>
    <string name="street_tole_name">Street / Tole</string>
    <string name="ward_no">Ward No.</string>
    <string name="municipality_name">Municipality / Rural Municipality  /Sub-Metropolitan / Metropolitan</string>
    <string name="district">District</string>
    <string name="province">Province</string>
    <string name="house_no">House No.</string>
    <string name="edit_btn_text">Edit</string>
    <string name="update">Update</string>
    <string name="save_btn_text">Save</string>
    <string name="unable_to_login_message">Unable to sign in, Please try again later!</string>
    <string name="name">Name</string>
    <string name="empty_name_error_message">Name can\'t be empty.</string>
    <string name="empty_phone_error_message">Please Enter your Phone Number.</string>
    <string name="empty_street_name_error_message">Please Enter Your Street Name</string>
    <string name="empty_ward_number_error_message">Please Enter Your Ward Number.</string>
    <string name="empty_municipality_error_message">Enter Your Rural Municipality, Municipality, Metropolitan or Sub-Metropolitan.</string>
    <string name="empty_district_name_error_message">Enter Your District Name.</string>
    <string name="empty_province_name_error_message">Enter Your Province Here.</string>
    <string name="input_field_validation_error">Please enter all the details correctly</string>
    <string name="user_stored_success_message">User\'s data stored successfully.</string>
    <string name="signout">Signout</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome_to_existing_user">Welcome back to</string>
    <string name="done">Done</string>
    <string name="info_updated_message">Updated Successfully</string>
    <string name="general_setting">General</string>
    <string name="apperance">Appearance</string>
    <string name="choose_theme_apperance">Choose app appearance from here - Light or Dark theme</string>
    <string name="light_mode_theme">Light Mode</string>
    <string name="dark_mode_theme">Dark Mode</string>
    <string name="language_setting">Language</string>
    <string name="english">English</string>
    <string name="nepali">Nepali</string>
    <string name="tharu">Tharu</string>
    <string name="follow_system_theme">System Theme</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="policy_acceptance_info">By signing in, you will automatically accept our</string>
    <string name="home_fragment">Home</string>
    <string name="product_detail_fragment">Product Details</string>
    <string name="cart_fragment">Cart</string>
    <string name="order_fragment">Order</string>
    <string name="profile_fragment">Profile</string>
    <string name="order_confirmation_fragment">Order Confirmation</string>
    <string name="under_processing_fragment">Under Processing</string>
    <string name="ontheway_fragment">Orders On The Way</string>
    <string name="order_history_fragment">Orders History</string>
    <string name="unconfirmed_order_fragment">Unconfirmed Orders</string>
    <string name="order_tracking_fragment">Track Order</string>
    <string name="address_fragment">Address</string>
    <string name="setting_fragment">Setting</string>
    <string name="location_provider_enable_request">Please enable GPS or Internet Connection</string>
    <string name="language_setting_sub_title">Choose your preferred language from here</string>
    <string name="next">Next</string>
    <string name="account">Account</string>
    <string name="account_setting_subtitle">Update your account from here.</string>
    <string name="go_to_cart_button">Go to Cart</string>
    <string name="product_added_in_cart_message">Product Added Successfully</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="distribution_points">Distribution Points</string>
    <string name="setting">Setting</string>
    <string name="guest">Guest</string>
    <string name="authentication_failed_message">Unable to authenticate</string>
    <string name="language_unchecked_error_message">Please choose your preferred language</string>
    <string name="internet_connection_error">Please connect with the internet for further processing</string>
    <string name="connect">Connect</string>
    <string name="no_internet">No internet connection</string>
    <string name="invoice_generated_message">Invoice Generated Successfully.</string>
    <string name="generate_invoices">Generate Invoice</string>
    <string name="invalid_varification_code">Invalid Verification Code</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="verify_code">Verify Now</string>
    <string name="code_not_received">Didn\'t get the code</string>
    <string name="resend">RESEND</string>
    <string name="enter_your_mobile_number_login">Please enter you mobile number to login</string>
    <string name="enter_the_varification_code">Please enter the varification code sent on your mobile</string>
    <string name="sign_in_with_mobile">Sign In With Mobile</string>
    <string name="sent_otp">Sent OTP</string>

</resources>