<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_nav_host"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.itheamc.meatprocessing.ui.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_productFragment"
            app:destination="@id/productFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingFragment"
            app:destination="@id/settingFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_distributionsFragment"
            app:destination="@id/distributionsFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.itheamc.meatprocessing.ui.ProductFragment"
        android:label="@string/product_detail_fragment">
        <action
            android:id="@+id/action_productFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_productFragment_to_orderFragment"
            app:destination="@id/orderFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.itheamc.meatprocessing.ui.CartFragment"
        android:label="@string/cart_fragment">
        <action
            android:id="@+id/action_cartFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.itheamc.meatprocessing.ui.OrderFragment"
        android:label="@string/order_fragment"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_confirmationFragment"
            app:destination="@id/confirmationFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.itheamc.meatprocessing.ui.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_unconfirmedOrderFragment"
            app:destination="@id/unconfirmedOrderFragment" />
        <action
            android:id="@+id/action_profileFragment_to_confirmedOrderFragment"
            app:destination="@id/confirmedOrderFragment" />
        <action
            android:id="@+id/action_profileFragment_to_deliveringOrderFragment"
            app:destination="@id/deliveringOrderFragment" />
        <action
            android:id="@+id/action_profileFragment_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
        <action
            android:id="@+id/action_profileFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmationFragment"
        android:name="com.itheamc.meatprocessing.ui.ConfirmationFragment"
        android:label="@string/order_confirmation_fragment"
        tools:layout="@layout/fragment_confirmation">
        <action
            android:id="@+id/action_confirmationFragment_to_unconfirmedOrderFragment"
            app:destination="@id/unconfirmedOrderFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmedOrderFragment"
        android:name="com.itheamc.meatprocessing.ui.ConfirmedOrderFragment"
        android:label="@string/under_processing_fragment"
        tools:layout="@layout/fragment_confirmed_order" />
    <fragment
        android:id="@+id/deliveringOrderFragment"
        android:name="com.itheamc.meatprocessing.ui.DeliveringOrderFragment"
        android:label="@string/ontheway_fragment"
        tools:layout="@layout/fragment_delivering_order">
        <action
            android:id="@+id/action_deliveringOrderFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="com.itheamc.meatprocessing.ui.OrderHistoryFragment"
        android:label="@string/order_history_fragment"
        tools:layout="@layout/fragment_order_history" />
    <fragment
        android:id="@+id/unconfirmedOrderFragment"
        android:name="com.itheamc.meatprocessing.ui.UnconfirmedOrderFragment"
        android:label="@string/unconfirmed_order_fragment"
        tools:layout="@layout/fragment_unconfirmed_order" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.itheamc.meatprocessing.ui.MapsFragment"
        android:label="@string/order_tracking_fragment"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.itheamc.meatprocessing.ui.AddressFragment"
        android:label="@string/address_fragment"
        tools:layout="@layout/fragment_address" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.itheamc.meatprocessing.ui.SettingFragment"
        android:label="@string/setting_fragment" >
        <action
            android:id="@+id/action_settingFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/distributionsFragment"
        android:name="com.itheamc.meatprocessing.ui.DistributionsFragment"
        android:label="Sellers"
        tools:layout="@layout/fragment_distributions" />
</navigation>